# Mooncake

mooncake-common/: common.cmake
mooncake-transfer-engine/: CMakeLists.txt
mooncake-transfer-engine/example/: CMakeLists.txt  transfer_engine_ascend_one_sided.cpp  transfer_engine_ascend_perf.cpp  transfer_engine_ascend_test.cpp
mooncake-transfer-engine/include/: common.h  transfer_engine.h  transfer_metadata.h
mooncake-transfer-engine/include/transport/: transport.h
mooncake-transfer-engine/include/transport/ascend_transport/hccl_transport/: hccl_transport.h  hccl_transport_mem_c.h
mooncake-transfer-engine/src/: CMakeLists.txt  transfer_engine.cpp  transfer_metadata.cpp
mooncake-transfer-engine/src/common/: CMakeLists.txt
mooncake-transfer-engine/src/common/base/: CMakeLists.txt
mooncake-transfer-engine/src/transport/ascend_transport/: CMakeLists.txt
mooncake-transfer-engine/src/transport/ascend_transport/hccl_transport/: hccl_transport.cpp  jsom.cpp
mooncake-transfer-engine/src/transport/ascend_transport/hccl_transport/ascend_transport_c/: CMakeLists.txt  hccl_transport_mem_c.cpp
mooncake-transfer-engine/src/transport/ascend_transport/hccl_transport/script/: build_all_with_dependencies.sh  setup_basic_dependencies.sh
scripts/: hccl_tools.py
